@@ -129,6 +129,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configurable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|io
 operator|.
 name|compress
@@ -246,6 +260,20 @@ operator|.
 name|compress
 operator|.
 name|DefaultCodec
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|ReflectionUtils
 import|;
 end_import
 
@@ -379,12 +407,12 @@ argument_list|)
 block|{
 comment|// Use base type to avoid compile-time dependencies.
 specifier|private
-name|DefaultCodec
+name|CompressionCodec
 name|lzoCodec
 decl_stmt|;
 annotation|@
 name|Override
-name|DefaultCodec
+name|CompressionCodec
 name|getCodec
 parameter_list|()
 block|{
@@ -429,17 +457,14 @@ decl_stmt|;
 name|lzoCodec
 operator|=
 operator|(
-name|DefaultCodec
+name|CompressionCodec
 operator|)
-name|externalCodec
+name|ReflectionUtils
 operator|.
 name|newInstance
-argument_list|()
-expr_stmt|;
-name|lzoCodec
-operator|.
-name|setConf
 argument_list|(
+name|externalCodec
+argument_list|,
 name|conf
 argument_list|)
 expr_stmt|;
@@ -447,34 +472,6 @@ block|}
 catch|catch
 parameter_list|(
 name|ClassNotFoundException
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-name|e
-argument_list|)
-throw|;
-block|}
-catch|catch
-parameter_list|(
-name|InstantiationException
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-name|e
-argument_list|)
-throw|;
-block|}
-catch|catch
-parameter_list|(
-name|IllegalAccessException
 name|e
 parameter_list|)
 block|{
@@ -694,7 +691,7 @@ name|name
 expr_stmt|;
 block|}
 specifier|abstract
-name|DefaultCodec
+name|CompressionCodec
 name|getCodec
 parameter_list|()
 function_decl|;
@@ -714,7 +711,7 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|DefaultCodec
+name|CompressionCodec
 name|codec
 init|=
 name|getCodec
@@ -728,7 +725,15 @@ operator|>
 literal|0
 condition|)
 block|{
+name|Configurable
+name|c
+init|=
+operator|(
+name|Configurable
+operator|)
 name|codec
+decl_stmt|;
+name|c
 operator|.
 name|getConf
 argument_list|()
@@ -784,7 +789,7 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|DefaultCodec
+name|CompressionCodec
 name|codec
 init|=
 name|getCodec
@@ -820,7 +825,15 @@ operator|=
 name|downStream
 expr_stmt|;
 block|}
+name|Configurable
+name|c
+init|=
+operator|(
+name|Configurable
+operator|)
 name|codec
+decl_stmt|;
+name|c
 operator|.
 name|getConf
 argument_list|()
